C03S04 Creating the AWS Amplify Driver on your application

--- a/chat-app/amplify/backend/backend-config.json
+++ b/chat-app/amplify/backend/backend-config.json
@@ -49,5 +49,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "bucket": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
